--- a/config.json
+++ b/config.json
@@ -12,5 +12,19 @@
                 "password": "$2b$12$qQ32KLi2Fh/XcjVFUJeIveDIiQ5OCG2HxYNc1tUCyn7nLz.JdazQi"
             }
         ]
+    },
+    {
+        "port": 1290,
+        "addr": "http://127.0.0.1:8080",
+        "users": [
+            {
+                "name": "root",
+                "password": "$2b$12$knfPHgT/GUF2sMWZ53zLLeQyhMqpvsLt7sqQ7DQ2we2YjCbxtv9C2"
+            },
+            {
+                "name": "admin",
+                "password": "$2b$12$qQ32KLi2Fh/XcjVFUJeIveDIiQ5OCG2HxYNc1tUCyn7nLz.JdazQi"
+            }
+        ]
     }
 ]
